# quantum-computing-internship

./: LICENSE  README.md
architecture/: README.md
code/: main.py  pyproject.toml  requirements.txt
tests/: test_main.py
